--- a/chatpro/src/App.css
+++ b/chatpro/src/App.css
@@ -19,7 +19,21 @@ img {
     box-shadow: 0 0 10px rgb(164, 164, 164);
     align-items: center;
 }
-
+.sent {
+    background-color: #395dff;
+    color: white;
+    border-top-right-radius: 1000px;
+    flex-direction: row-reverse;
+    padding: 20px 20px 0 10px;
+    text-align: end;
+    float: right;
+  }  
+.received {
+    border: 1px solid lightgray;
+    background-color: #FAFAFA;
+    border-top-left-radius: 1000px;
+    float: left;
+  }
 .chat {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 500;
@@ -39,6 +53,12 @@ img {
         height: 35px;
         margin-top: -10px;
     }
+    .sent {
+        padding: 10px 10px 0 10px;
+    }
+    .received {
+        padding: 10px 10px 0 10px;
+    }
 }
 
 @media (max-width: 500px) {
@@ -49,5 +69,11 @@ img {
     img {
         height: 30px;
         margin-top: -7px;
+    }
+    .sent {
+        padding: 7px 7px 0 7px;
+    }
+    .received {
+        padding: 7px 7px 0 7px;
     }
 }
