--- a/chatpro/src/App.css
+++ b/chatpro/src/App.css
@@ -44,6 +44,21 @@ img {
     overflow-wrap: break-word;
 }
 
+.divstyles{
+    background-color: #47ad88;
+    max-width :450px;
+    max-height: 600px;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    border-radius: 25px;
+    color: white;
+  }
 @media (max-width: 775px) {
     .chat {
         font-size: 20px;
@@ -75,5 +90,13 @@ img {
     }
     .received {
         padding: 7px 7px 0 7px;
+    }
+    .divstyles{
+        margin-top: 20px;
+        margin-left: auto;
+        margin-right: auto;
+        align-items: center;
+        height: 100vh;
+        border-radius: 25px;
     }
 }
